--- a/Framework/ReadConfigFile.xaml
+++ b/Framework/ReadConfigFile.xaml
@@ -2,29 +2,29 @@
   <x:Members>
     <x:Property Name="out_DataTableMessages" Type="OutArgument(sd:DataTable)" />
     <x:Property Name="out_DataTableConfigData" Type="OutArgument(sd:DataTable)" />
-    <x:Property Name="in_StrConfigSheetNameData" Type="InArgument(x:String)" />
-    <x:Property Name="in_StrConfigSheetNameMessages" Type="InArgument(x:String)" />
     <x:Property Name="in_StrConfigFilePath" Type="InArgument(x:String)" />
+    <x:Property Name="in_StrConfigFileSheetNameData" Type="InArgument(x:String)" />
+    <x:Property Name="in_StrConfigFileSheetNameMessages" Type="InArgument(x:String)" />
   </x:Members>
-  <this:ReadConfigFile.in_StrConfigSheetNameData>
-    <InArgument x:TypeArguments="x:String">
-      <Literal x:TypeArguments="x:String" Value="" />
-    </InArgument>
-  </this:ReadConfigFile.in_StrConfigSheetNameData>
-  <this:ReadConfigFile.in_StrConfigSheetNameMessages>
-    <InArgument x:TypeArguments="x:String">
-      <Literal x:TypeArguments="x:String" Value="" />
-    </InArgument>
-  </this:ReadConfigFile.in_StrConfigSheetNameMessages>
   <this:ReadConfigFile.in_StrConfigFilePath>
     <InArgument x:TypeArguments="x:String">
       <Literal x:TypeArguments="x:String" Value="" />
     </InArgument>
   </this:ReadConfigFile.in_StrConfigFilePath>
+  <this:ReadConfigFile.in_StrConfigFileSheetNameData>
+    <InArgument x:TypeArguments="x:String">
+      <Literal x:TypeArguments="x:String" Value="" />
+    </InArgument>
+  </this:ReadConfigFile.in_StrConfigFileSheetNameData>
+  <this:ReadConfigFile.in_StrConfigFileSheetNameMessages>
+    <InArgument x:TypeArguments="x:String">
+      <Literal x:TypeArguments="x:String" Value="" />
+    </InArgument>
+  </this:ReadConfigFile.in_StrConfigFileSheetNameMessages>
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1099,1796</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1170,2670</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ReadConfigFile_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="34">
@@ -123,7 +123,7 @@
       <x:Boolean x:Key="ShouldExpandAll">True</x:Boolean>
     </scg:Dictionary>
   </sap:WorkflowViewStateService.ViewState>
-  <Sequence sap2010:Annotation.AnnotationText="Reads the " DisplayName="Sequence ReadConfigFile" sap:VirtualizedContainerService.HintSize="560,1731" sap2010:WorkflowViewState.IdRef="Sequence_9">
+  <Sequence sap2010:Annotation.AnnotationText="Reads the Microsoft Excel configuration file and populates the ConfigData and Messages data tables out arguments." DisplayName="Sequence ReadConfigFile" sap:VirtualizedContainerService.HintSize="880,2605" sap2010:WorkflowViewState.IdRef="Sequence_9">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="strWorkflowName">
         <Variable.Default>
@@ -138,60 +138,8 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:LogMessage DisplayName="Log Message RobotGLaDOS.ReadConfigFile.Begin;" sap:VirtualizedContainerService.HintSize="498,101" sap2010:WorkflowViewState.IdRef="LogMessage_10" Level="Trace" Message="[&quot;RobotGLaDOS.ReadConfigFile.Begin;&quot;]" />
-    <ui:MultipleAssign DisplayName="DEBUGGING" sap:VirtualizedContainerService.HintSize="498,172" sap2010:WorkflowViewState.IdRef="MultipleAssign_3">
-      <ui:MultipleAssign.AssignOperations>
-        <scg:List x:TypeArguments="ui:AssignOperation" Capacity="4">
-          <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_3">
-            <ui:AssignOperation.To>
-              <OutArgument x:TypeArguments="x:String">[in_StrConfigFilePath]</OutArgument>
-            </ui:AssignOperation.To>
-            <ui:AssignOperation.Value>
-              <InArgument x:TypeArguments="x:String">C:\Cloud\Dropbox\Code\Robotic Process Automation\Projects\Personal\RobotGLaDOS\Data\RobotGLaDOS-Config.xlsx</InArgument>
-            </ui:AssignOperation.Value>
-          </ui:AssignOperation>
-          <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_4">
-            <ui:AssignOperation.To>
-              <OutArgument x:TypeArguments="x:String">[in_StrConfigSheetNameData]</OutArgument>
-            </ui:AssignOperation.To>
-            <ui:AssignOperation.Value>
-              <InArgument x:TypeArguments="x:String">Data</InArgument>
-            </ui:AssignOperation.Value>
-          </ui:AssignOperation>
-          <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_5">
-            <ui:AssignOperation.To>
-              <OutArgument x:TypeArguments="x:String">[in_StrConfigSheetNameMessages]</OutArgument>
-            </ui:AssignOperation.To>
-            <ui:AssignOperation.Value>
-              <InArgument x:TypeArguments="x:String">Messages</InArgument>
-            </ui:AssignOperation.Value>
-          </ui:AssignOperation>
-        </scg:List>
-      </ui:MultipleAssign.AssignOperations>
-    </ui:MultipleAssign>
-    <Sequence DisplayName="Sequence Initialization" sap:VirtualizedContainerService.HintSize="498,373" sap2010:WorkflowViewState.IdRef="Sequence_10">
-      <sap:WorkflowViewStateService.ViewState>
-        <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-        </scg:Dictionary>
-      </sap:WorkflowViewStateService.ViewState>
-      <ui:MultipleAssign DisplayName="Multiple Assign Initialization" sap:VirtualizedContainerService.HintSize="431,110" sap2010:WorkflowViewState.IdRef="MultipleAssign_2">
-        <ui:MultipleAssign.AssignOperations>
-          <scg:List x:TypeArguments="ui:AssignOperation" Capacity="4">
-            <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_2">
-              <ui:AssignOperation.To>
-                <OutArgument x:TypeArguments="x:String">[strWorkflowName]</OutArgument>
-              </ui:AssignOperation.To>
-              <ui:AssignOperation.Value>
-                <InArgument x:TypeArguments="x:String">RobotGLaDOS.Framework.ReadConfigFile</InArgument>
-              </ui:AssignOperation.Value>
-            </ui:AssignOperation>
-          </scg:List>
-        </ui:MultipleAssign.AssignOperations>
-      </ui:MultipleAssign>
-      <ui:LogMessage DisplayName="Log Message Begin" sap:VirtualizedContainerService.HintSize="431,101" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Trace" Message="[strWorkflowName + &quot;.Begin;&quot;]" />
-    </Sequence>
-    <Sequence DisplayName="Sequence Validation" sap:VirtualizedContainerService.HintSize="498,221" sap2010:WorkflowViewState.IdRef="Sequence_11">
+    <ui:LogMessage DisplayName="Log Message RobotGLaDOS.Framework.ReadConfigFile.Begin;" sap:VirtualizedContainerService.HintSize="818,101" sap2010:WorkflowViewState.IdRef="LogMessage_10" Level="Trace" Message="[&quot;RobotGLaDOS.Framework.ReadConfigFile.Begin;&quot;]" />
+    <Sequence DisplayName="Sequence Validation" sap:VirtualizedContainerService.HintSize="818,221" sap2010:WorkflowViewState.IdRef="Sequence_11">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -199,11 +147,11 @@
       </sap:WorkflowViewStateService.ViewState>
       <ui:PathExists Resource="{x:Null}" DisplayName="Path Exists in_StrConfigFile" Exists="[isValidFilePath]" sap:VirtualizedContainerService.HintSize="338,99" sap2010:WorkflowViewState.IdRef="PathExists_2" Path="[in_StrConfigFilePath]" PathType="File" />
     </Sequence>
-    <Sequence DisplayName="Sequence Microsoft Excel Read" sap:VirtualizedContainerService.HintSize="498,80" sap2010:WorkflowViewState.IdRef="Sequence_14">
+    <Sequence DisplayName="Sequence Microsoft Excel Read" sap:VirtualizedContainerService.HintSize="818,1909" sap2010:WorkflowViewState.IdRef="Sequence_14">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">False</x:Boolean>
-          <x:Boolean x:Key="IsPinned">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <If Condition="[isValidFilePath = true]" DisplayName="If isValidFilePath" sap:VirtualizedContainerService.HintSize="756,1787" sap2010:WorkflowViewState.IdRef="If_1">
@@ -246,8 +194,8 @@
                                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                 </scg:Dictionary>
                               </sap:WorkflowViewStateService.ViewState>
-                              <ueab:ReadRangeX DisplayName="Read Range Config Data" sap:VirtualizedContainerService.HintSize="444,178" sap2010:WorkflowViewState.IdRef="ReadRangeX_4" Range="[Excel.Sheet(in_StrConfigSheetNameData)]" SaveTo="[out_DataTableConfigData]" />
-                              <ueab:ReadRangeX DisplayName="Read Range Config Messages" sap:VirtualizedContainerService.HintSize="444,178" sap2010:WorkflowViewState.IdRef="ReadRangeX_5" Range="[Excel.Sheet(in_StrConfigSheetNameMessages)]" SaveTo="[out_DataTableMessages]" />
+                              <ueab:ReadRangeX DisplayName="Read Range Config Data" sap:VirtualizedContainerService.HintSize="444,178" sap2010:WorkflowViewState.IdRef="ReadRangeX_4" Range="[Excel.Sheet(in_StrConfigFileSheetNameData)]" SaveTo="[out_DataTableConfigData]" />
+                              <ueab:ReadRangeX DisplayName="Read Range Config Messages" sap:VirtualizedContainerService.HintSize="444,178" sap2010:WorkflowViewState.IdRef="ReadRangeX_5" Range="[Excel.Sheet(in_StrConfigFileSheetNameMessages)]" SaveTo="[out_DataTableMessages]" />
                             </Sequence>
                           </ActivityAction>
                         </ueab:ExcelApplicationCard.Body>
@@ -280,83 +228,6 @@
         </If.Else>
       </If>
     </Sequence>
-    <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="498,290" sap2010:WorkflowViewState.IdRef="CommentOut_1">
-      <ui:CommentOut.Body>
-        <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="462,202" sap2010:WorkflowViewState.IdRef="Sequence_21">
-          <sap:WorkflowViewStateService.ViewState>
-            <scg:Dictionary x:TypeArguments="x:String, x:Object">
-              <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-            </scg:Dictionary>
-          </sap:WorkflowViewStateService.ViewState>
-          <Sequence DisplayName="Sequence Data Table Report" sap:VirtualizedContainerService.HintSize="400,80" sap2010:WorkflowViewState.IdRef="Sequence_15">
-            <Sequence.Variables>
-              <Variable x:TypeArguments="x:String" Name="strGame">
-                <Variable.Default>
-                  <Literal x:TypeArguments="x:String" Value="" />
-                </Variable.Default>
-              </Variable>
-              <Variable x:TypeArguments="x:String" Name="strPath">
-                <Variable.Default>
-                  <Literal x:TypeArguments="x:String" Value="" />
-                </Variable.Default>
-              </Variable>
-              <Variable x:TypeArguments="x:Boolean" Default="False" Name="booleanShouldRun" />
-              <Variable x:TypeArguments="x:String" Name="strPlatform">
-                <Variable.Default>
-                  <Literal x:TypeArguments="x:String" Value="" />
-                </Variable.Default>
-              </Variable>
-            </Sequence.Variables>
-            <sap:WorkflowViewStateService.ViewState>
-              <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <x:Boolean x:Key="IsExpanded">False</x:Boolean>
-                <x:Boolean x:Key="IsPinned">True</x:Boolean>
-              </scg:Dictionary>
-            </sap:WorkflowViewStateService.ViewState>
-            <ui:ForEachRow ColumnNames="{x:Null}" CurrentIndex="{x:Null}" DataTable="[out_DataTableConfigData]" DisplayName="For Each Row in Data Table dtConfigGOG" sap:VirtualizedContainerService.HintSize="434,1715" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
-              <ui:ForEachRow.Body>
-                <ActivityAction x:TypeArguments="sd:DataRow">
-                  <ActivityAction.Argument>
-                    <DelegateInArgument x:TypeArguments="sd:DataRow" Name="CurrentRow" />
-                  </ActivityAction.Argument>
-                  <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="400,1590" sap2010:WorkflowViewState.IdRef="Sequence_16">
-                    <sap:WorkflowViewStateService.ViewState>
-                      <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-                      </scg:Dictionary>
-                    </sap:WorkflowViewStateService.ViewState>
-                    <ui:GetRowItem Column="{x:Null}" ColumnIndex="{x:Null}" ColumnName="Platform" DisplayName="Get Row Item Platform" sap:VirtualizedContainerService.HintSize="338,196" sap2010:WorkflowViewState.IdRef="GetRowItem_1" Row="[CurrentRow]">
-                      <ui:GetRowItem.Value>
-                        <OutArgument x:TypeArguments="x:String">[strPlatform]</OutArgument>
-                      </ui:GetRowItem.Value>
-                    </ui:GetRowItem>
-                    <ui:LogMessage DisplayName="Log Message Platform" sap:VirtualizedContainerService.HintSize="338,101" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="Info" Message="[&quot;Platform: &quot; + strPlatform]" />
-                    <ui:GetRowItem Column="{x:Null}" ColumnIndex="{x:Null}" ColumnName="Game" DisplayName="Get Row Item Game" sap:VirtualizedContainerService.HintSize="338,196" sap2010:WorkflowViewState.IdRef="GetRowItem_4" Row="[CurrentRow]">
-                      <ui:GetRowItem.Value>
-                        <OutArgument x:TypeArguments="x:String">[strGame]</OutArgument>
-                      </ui:GetRowItem.Value>
-                    </ui:GetRowItem>
-                    <ui:LogMessage DisplayName="Log Message Game" sap:VirtualizedContainerService.HintSize="338,101" sap2010:WorkflowViewState.IdRef="LogMessage_7" Level="Info" Message="[&quot;Game: &quot; + strGame]" />
-                    <ui:GetRowItem Column="{x:Null}" ColumnIndex="{x:Null}" ColumnName="Path" DisplayName="Get Row Item Path" sap:VirtualizedContainerService.HintSize="338,196" sap2010:WorkflowViewState.IdRef="GetRowItem_2" Row="[CurrentRow]">
-                      <ui:GetRowItem.Value>
-                        <OutArgument x:TypeArguments="x:String">[strPath]</OutArgument>
-                      </ui:GetRowItem.Value>
-                    </ui:GetRowItem>
-                    <ui:LogMessage DisplayName="Log Message Path" sap:VirtualizedContainerService.HintSize="338,101" sap2010:WorkflowViewState.IdRef="LogMessage_5" Level="Info" Message="[&quot;Path: &quot; + strPath]" />
-                    <ui:GetRowItem Column="{x:Null}" ColumnIndex="{x:Null}" ColumnName="Run" DisplayName="Get Row Item Run" sap:VirtualizedContainerService.HintSize="338,196" sap2010:WorkflowViewState.IdRef="GetRowItem_3" Row="[CurrentRow]">
-                      <ui:GetRowItem.Value>
-                        <OutArgument x:TypeArguments="x:Boolean">[booleanShouldRun]</OutArgument>
-                      </ui:GetRowItem.Value>
-                    </ui:GetRowItem>
-                    <ui:LogMessage DisplayName="Log Message Run" sap:VirtualizedContainerService.HintSize="338,101" sap2010:WorkflowViewState.IdRef="LogMessage_6" Level="Info" Message="[&quot;Run: &quot; + booleanShouldRun.ToString]" />
-                  </Sequence>
-                </ActivityAction>
-              </ui:ForEachRow.Body>
-            </ui:ForEachRow>
-          </Sequence>
-        </Sequence>
-      </ui:CommentOut.Body>
-    </ui:CommentOut>
-    <ui:LogMessage DisplayName="Log Message RobotGLaDOS.ReadConfigFile.End;" sap:VirtualizedContainerService.HintSize="498,101" sap2010:WorkflowViewState.IdRef="LogMessage_11" Level="Trace" Message="[&quot;RobotGLaDOS.ReadConfigFile.End;&quot;]" />
+    <ui:LogMessage DisplayName="Log Message RobotGLaDOS.Framework.ReadConfigFile.End;" sap:VirtualizedContainerService.HintSize="818,101" sap2010:WorkflowViewState.IdRef="LogMessage_11" Level="Trace" Message="[&quot;RobotGLaDOS.Framework.ReadConfigFile.End;&quot;]" />
   </Sequence>
 </Activity>
