--- a/Main.xaml
+++ b/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1115,2328" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data.Common" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="452,2715" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="28">
       <x:String>System.Activities</x:String>
@@ -78,13 +78,28 @@
       <AssemblyReference>System.Private.Uri</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="The main entry point for the RobotGLaDOS, Genetic Lifeform and Disk Operating System." DisplayName="Sequence Main" sap:VirtualizedContainerService.HintSize="462,2263" sap2010:WorkflowViewState.IdRef="Sequence_4">
+  <Sequence sap2010:Annotation.AnnotationText="The main entry point for the RobotGLaDOS, Genetic Lifeform and Disk Operating System." DisplayName="Sequence Main" sap:VirtualizedContainerService.HintSize="462,2650" sap2010:WorkflowViewState.IdRef="Sequence_4">
     <Sequence.Variables>
-      <Variable x:TypeArguments="x:String" Name="strConfigFilePath" />
-      <Variable x:TypeArguments="sd:DataTable" Name="dt_ConfigData" />
-      <Variable x:TypeArguments="sd:DataTable" Name="dt_Messages" />
-      <Variable x:TypeArguments="x:String" Name="strConfigFileSheetNameData" />
-      <Variable x:TypeArguments="x:String" Name="strConfigFileSheetNameMessages" />
+      <Variable x:TypeArguments="x:String" Name="strConfigFilePath">
+        <Variable.Default>
+          <Literal x:TypeArguments="x:String" Value="" />
+        </Variable.Default>
+      </Variable>
+      <Variable x:TypeArguments="x:String" Name="strConfigFileSheetNameData">
+        <Variable.Default>
+          <Literal x:TypeArguments="x:String" Value="" />
+        </Variable.Default>
+      </Variable>
+      <Variable x:TypeArguments="x:String" Name="strConfigFileSheetNameMessages">
+        <Variable.Default>
+          <Literal x:TypeArguments="x:String" Value="" />
+        </Variable.Default>
+      </Variable>
+      <Variable x:TypeArguments="x:String" Name="strConfigFileSheetNamePlatforms">
+        <Variable.Default>
+          <Literal x:TypeArguments="x:String" Value="" />
+        </Variable.Default>
+      </Variable>
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -93,7 +108,7 @@
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <ui:LogMessage DisplayName="Log Message RobotGLaDOS.Main.Begin;" sap:VirtualizedContainerService.HintSize="400,101" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Trace" Message="[&quot;RobotGLaDOS.Main.Begin;&quot;]" />
-    <Sequence sap2010:Annotation.AnnotationText="The initialization containds data points that need to be populated for the process to run.  These values are created as assets on cloud.uipath.com." DisplayName="Sequence Initialization" sap:VirtualizedContainerService.HintSize="400,1300" sap2010:WorkflowViewState.IdRef="Sequence_2">
+    <Sequence sap2010:Annotation.AnnotationText="The initialization containds data points that need to be populated for the process to run.  These values are created as assets on cloud.uipath.com." DisplayName="Sequence Initialization" sap:VirtualizedContainerService.HintSize="400,1687" sap2010:WorkflowViewState.IdRef="Sequence_2">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -115,30 +130,28 @@
           <OutArgument x:TypeArguments="x:String">[strConfigFileSheetNameMessages]</OutArgument>
         </ui:GetRobotAsset.Value>
       </ui:GetRobotAsset>
+      <ui:GetRobotAsset AssetName="ConfigFileSheetNamePlatforms" CacheStrategy="None" DisplayName="Get Asset ConfigFileSheetNamePlatforms" FolderPath="RobotGLaDOS" sap:VirtualizedContainerService.HintSize="338,347" sap2010:WorkflowViewState.IdRef="GetRobotAsset_4" TimeoutMS="10000">
+        <ui:GetRobotAsset.Value>
+          <OutArgument x:TypeArguments="x:String">[strConfigFileSheetNamePlatforms]</OutArgument>
+        </ui:GetRobotAsset.Value>
+      </ui:GetRobotAsset>
     </Sequence>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="ReadConfigFile.xaml - Invoke Workflow File ReadConfigFile.xaml" sap:VirtualizedContainerService.HintSize="400,122" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Framework\ReadConfigFile.xaml">
       <ui:InvokeWorkflowFile.Arguments>
         <InArgument x:TypeArguments="x:String" x:Key="in_StrConfigFilePath">[strConfigFilePath]</InArgument>
         <InArgument x:TypeArguments="x:String" x:Key="in_StrConfigFileSheetNameData">[strConfigFileSheetNameData]</InArgument>
         <InArgument x:TypeArguments="x:String" x:Key="in_StrConfigFileSheetNameMessages">[strConfigFileSheetNameMessages]</InArgument>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_DataTableConfigData">[dt_ConfigData]</OutArgument>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_DataTableMessages">[dt_Messages]</OutArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_StrConfigFileSheetNamePlatforms">[strConfigFileSheetNamePlatforms]</InArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="ProcessArbiter.xaml - Invoke Workflow File ProcessArbiter.xaml" sap:VirtualizedContainerService.HintSize="400,122" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="ProcessArbiter.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="sd:DataTable" x:Key="in_DataTableConfigData">
-          <VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="dt_ConfigData" />
-        </InArgument>
-        <InArgument x:TypeArguments="sd:DataTable" x:Key="in_DataTableMessages">
-          <VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="dt_Messages" />
-        </InArgument>
+        <scg:Dictionary x:TypeArguments="x:String, Argument" />
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Test logging statement: This is row 1, Id 0." DisplayName="LogMessage.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="400,153" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Framework\LogMessage.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="x:Int32" x:Key="in_IntIdentifier">0</InArgument>
-        <InArgument x:TypeArguments="sd:DataTable" x:Key="in_DataTableMessages">[dt_Messages]</InArgument>
+        <InArgument x:TypeArguments="x:Int32" x:Key="in_IntIdentifier">1</InArgument>
         <InArgument x:TypeArguments="x:String" x:Key="in_StrLogLevel">Info</InArgument>
       </ui:InvokeWorkflowFile.Arguments>
       <sap:WorkflowViewStateService.ViewState>
